NetBSD Problem Report #50671

From www@NetBSD.org  Sun Jan 17 15:49:08 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id DD62C7ACAD
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 17 Jan 2016 15:49:07 +0000 (UTC)
Message-Id: <20160117154906.C61F77ACBC@mollari.NetBSD.org>
Date: Sun, 17 Jan 2016 15:49:06 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sbin/route/route.c:664: memory leak * 7
X-Send-Pr-Version: www-1.0

>Number:         50671
>Category:       bin
>Synopsis:       src/sbin/route/route.c:664: memory leak * 7
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jan 17 15:50:00 +0000 2016
>Closed-Date:    Sun Jan 17 16:18:30 +0000 2016
>Last-Modified:  Sun Jan 17 16:18:30 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160116
>Organization:
>Environment:
>Description:
[src/sbin/route/route.c:664]: (error) Memory leak: sou.so_dst
[src/sbin/route/route.c:664]: (error) Memory leak: sou.so_gate
[src/sbin/route/route.c:664]: (error) Memory leak: sou.so_mask
[src/sbin/route/route.c:664]: (error) Memory leak: sou.so_genmask
[src/sbin/route/route.c:664]: (error) Memory leak: sou.so_ifa
[src/sbin/route/route.c:664]: (error) Memory leak: sou.so_ifp
[src/sbin/route/route.c:664]: (error) Memory leak: sou.so_mpls

    if (*cmd == 'g')
        return ret != 0;

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50671 CVS commit: src/sbin/route
Date: Sun, 17 Jan 2016 10:59:26 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Jan 17 15:59:26 UTC 2016

 Modified Files:
 	src/sbin/route: route.c

 Log Message:
 PR/50671: David Binderman: fix memory leak.


 To generate a diff of this commit:
 cvs rdiff -u -r1.151 -r1.152 src/sbin/route/route.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 17 Jan 2016 16:18:30 +0000
State-Changed-Why:
Fixed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.