PR/50671: David Binderman: fix memory leak.